--- a/templates/default/css/style.css
+++ b/templates/default/css/style.css
@@ -41,7 +41,7 @@ padding-right: 25px;
 }
 .border_b {
 border-bottom: 2px solid #ccc;
-padding-right: 25px;
+/*padding-right: 25px;*/
 }
 
 
@@ -57,8 +57,8 @@ table {
 background: #fff;
 }
 
-td.data, td select {
-background: #fff;
+td.data, td.data span.data, td select {
+/*background: #fff;*/
 color: blue;
 font-size: 15px;
 
@@ -68,7 +68,7 @@ td.data span {
 
 color: black;
 font-size: 15px;
-
+white-space: nowrap;
 }
 
 .btc_worth {
@@ -78,6 +78,7 @@ color: green;
 font-size: 13px;
 border: 0px;
 background: none;
+white-space: nowrap;
 }
 
 form p {
@@ -111,6 +112,8 @@ p, h3 {
 div.tabdiv {
 	padding:15px;
 	width:auto;
+	min-width: 1165px;
+	min-height: 150px;
 	display:inline-block;
 	background:#fff;
                             border: 1px solid #808080;
