--- a/templates/default/css/style.css
+++ b/templates/default/css/style.css
@@ -111,7 +111,7 @@ p, h3 {
 
 div.tabdiv {
 	padding:15px;
-	width:auto;
+	width:90%;
 	min-width: 1165px;
 	min-height: 150px;
 	display:inline-block;
@@ -160,4 +160,8 @@ margin: 20px;
     display:block;
     width:350px;
     word-wrap:break-word;
+}
+
+#coins_table {
+width: 100%;
 }
