--- a/templates/default/css/style.css
+++ b/templates/default/css/style.css
@@ -165,3 +165,15 @@ margin: 20px;
 #coins_table {
 width: 100%;
 }
+
+.red {
+    color: red;
+}
+
+.green {
+    color: green;
+}
+
+.orange {
+    color: #ffb83f;
+}
