--- a/templates/default/css/style.css
+++ b/templates/default/css/style.css
@@ -177,3 +177,7 @@ width: 100%;
 .orange {
     color: #ffb83f;
 }
+
+#percent_change_amount, #percent_change_time, #percent_change_alert_type {
+display: none;
+}
