--- a/templates/default/css/style.css
+++ b/templates/default/css/style.css
@@ -1,5 +1,5 @@
 /*
- * DFD Cryptocoin Values by Mike Kilday: http://DragonFrugal.com
+ * Copyright 2014-2018 GPLv3, DFD Cryptocoin Values by Mike Kilday: http://DragonFrugal.com
  */
 
 body {
