--- a/templates/default/css/style.css
+++ b/templates/default/css/style.css
@@ -125,26 +125,40 @@ div.tabdiv {
                             border: 1px solid #808080;
 }
 
-.tabs li {
-	list-style:none;
-	display:inline;
-}
-
-.tabs a {
-	padding:5px 10px;
-	display:inline-block;
-	background:#808080;
-	color:black;
-	text-decoration:none;
-}
-
-.tabs a.active {
-                            border-top: 1px solid #808080;
-                            border-left: 1px solid #808080;
-                            border-right: 1px solid #808080;
-	background:#fff;
-	color:#000;
-}
+	.tabli a {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+	}
+	
+	.tabdiv {
+    border-top-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+	}
+	
+     .tabs li {
+        list-style:none;
+        display:inline;
+     }
+     
+     
+     .tabs a {
+        padding:5px 10px;
+        display:inline-block;
+        background:#808080;
+        color:black;
+        text-decoration:none;
+     }
+     
+     .tabs a.active {
+        top: 1px;
+        position: relative;
+        border-top: 1px solid black;
+        border-left: 1px solid black;
+        border-right: 1px solid black;
+        background:#fff;
+        color:#000;
+     }
 
 .calculators {
 border: 2px solid blue;
