Initial ability to hide charts, misc other revisions
Initial ability to hide charts, misc other revisions

--- a/ui-templates/css/style.css
+++ b/ui-templates/css/style.css
@@ -95,7 +95,7 @@ width: 15px !important;
 height: 15px !important;
 }
 
-input[type=submit], input[type=button] {
+input[type=submit], input[type=button], .force_button_style {
   background-color: #808080;
   border: 1px solid black;
   color: white;
