Reload countdown notice on secondary pages
Reload countdown notice on secondary pages

--- a/ui-templates/css/style.css
+++ b/ui-templates/css/style.css
@@ -356,11 +356,19 @@ text-decoration: none;
 }
 
 .force_1200px_wrapper {
+position: relative;
 max-width: 1200px;
 }
 
 .charts_wrapper {
+position: relative;
 width: 100%;
+}
+
+.countdown_notice {
+position: absolute;
+top: 0px;
+right: 0px;
 }
 
 /* //////////////////////////////
