--- a/ui-templates/css/style.css
+++ b/ui-templates/css/style.css
@@ -131,6 +131,21 @@ CLASSES
 ////////////////////////////// */
 
 
+.extra_margins {
+padding: 11px;
+}
+
+
+.result {
+margin: 7px; border: 2px solid black; padding: 7px;
+}
+    
+    
+.normal {
+font-weight: normal;
+}
+
+
 .coin_info {
 margin: 5px;
 white-space: nowrap;
